  + New ToIcon overload with ScalingMode parameter
  - ConvertPixelFormat methods: Setting ColorPalette.Flags of the result Bitmap correctly. In Mono/Linux it could
    happen that the result Bitmap had alpha palette entries but the bitmap wasn't rendered with alpha colors.

! KGySoft.Drawing.Imaging namespace:
====================================
! RandomNoiseDitherer
  ! Constructor: An ArgumentOutOfRangeException is thrown for invalid strength
  ! The result differs from previous versions when using a specific seed
  * Improved performance
! InterleavedGradientNoiseDitherer constructor: An ArgumentOutOfRangeException is thrown for invalid strength
- OptimizedPaletteQuantizer class:
  - Octree method: Fixing a possible exception under .NET 3.5 caused by different behavior of Array.Sort
* BitmapDataExtensions class:
  + New BeginClone/EndClone methods
  + New CloneAsync methods (for .NET 4.0 and above)
  + New BeginCopyTo/EndCopyTo methods
  + New CopyToAsync method (for .NET 4.0 and above)
  + New BeginDrawInto/EndDrawInto methods
  + New DrawIntoAsync methods (for .NET 4.0 and above)
  + New BeginToBitmap/EndToBitmap methods
  + New ToBitmapAsync method (for .NET 4.0 and above)
  + New BeginGetColors/EndGetColors methods
  + New GetColorsAsync method (for .NET 4.0 and above)
  + New BeginGetColorCount/EndGetColorCount methods
  + New GetColorCountAsync method (for .NET 4.0 and above)
  + New BeginToGrayscale/EndToGrayscale methods
  + New ToGrayscaleAsync method (for .NET 4.0 and above)
  + New BeginMakeGrayscale/EndMakeGrayscale methods
  + New MakeGrayscaleAsync method (for .NET 4.0 and above)
  + New BeginToTransparent/EndToTransparent methods
  + New ToTransparentAsync methods (for .NET 4.0 and above)
  + New BeginMakeTransparent/EndMakeTransparent methods
  + New MakeTransparentAsync method (for .NET 4.0 and above)
  + New BeginClear/EndClear methods
  + New ClearAsync method (for .NET 4.0 and above)
  + New BeginQuantize/EndQuantize methods